--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "comp 1256 lab exercise 04",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\""
+    "test": "echo \"Error: no test specified\"",
+    "ci": "echo \"Error: No ci configured"
   },
   "keywords": [],
   "author": "Rainbow Yan",
