--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "comp2156",
   "version": "1.0.0",
-  "description": "comp 1256 lab exercise 04",
+  "description": "comp 1256 lab exercise",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\"",
