--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "eject": "react-scripts eject"
   },
   "keywords": [],
-  "author": "Rainbow Yan",
+  "author": "Rainbow_Yan",
   "license": "ISC",
   "dependencies": {
     "gh-pages": "^2.0.1",
