--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",  
   "description": "comp 1256 lab exercise",
   "main": "index.js",
-  "homepage": "https://pritamworld.github.io/COMP2156-dep-inclusions/",
+  "homepage": "https://rainbow075.github.io/COMP2156_Labs/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
